* java11 isBlank used. tweak sql2json script.